[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
log = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
interprocess = "1.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.creditcoin-node]
git = "https://github.com/ESPINS/creditcoin"
version = '2.0.0-beta.7'
rev = "d280663a712ff7e6a208af51aed629045db9a1d8"

[dependencies.tauri-plugin-log]
git = "https://github.com/ESPINS/tauri-plugin-log"
rev = "2c3ff4b1d85a5a6ec52ce70ea012ae243027b45b"

[dependencies.tauri-plugin-highlander]
git = "https://github.com/ESPINS/tauri-plugin-highlander"
rev = "810bd844b14b9b38c275b84fef5df2520f74cbf2"

[profile.release]
panic = 'unwind'
